[package]
name = "fluent-asserter"
version = "0.1.0"
edition = "2021"
authors = ["Daniel Moka <mokadaniel89@gmail.com>"]
license = "Apache-2.0"
description = "A library enabling fluent test assertions"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.0"
